<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <com.smarteist.autoimageslider.SliderView
        android:id="@+id/image_slider"
        android:layout_width="411dp"
        android:layout_height="308dp"
        android:layout_above="@+id/textView6"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="-3dp"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="-67dp"
        app:sliderAnimationDuration="600"
        app:sliderAutoCycleDirection="back_and_forth"
        app:sliderAutoCycleEnabled="true"
        app:sliderIndicatorAnimationDuration="600"
        app:sliderIndicatorGravity="center_horizontal|bottom"
        app:sliderIndicatorMargin="15dp"
        app:sliderIndicatorOrientation="horizontal"
        app:sliderIndicatorPadding="3dp"
        app:sliderIndicatorRadius="2dp"
        app:sliderIndicatorSelectedColor="#5A5A5A"
        app:sliderIndicatorUnselectedColor="#FFF"
        app:sliderScrollTimeInSec="2"
        app:sliderStartAutoCycle="true">

    </com.smarteist.autoimageslider.SliderView>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView5"
        android:layout_alignParentStart="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="160dp"
        android:layout_marginBottom="11dp"
        android:gravity="center_vertical"
        android:text="@string/rick_y_morty"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView7"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="61dp"
        android:layout_marginEnd="86dp"
        android:layout_marginBottom="23dp"
        android:gravity="center_horizontal"
        android:text="@string/fecha_de_lanzamiento"
        android:textSize="14sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView8"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="111dp"
        android:layout_marginEnd="114dp"
        android:layout_marginBottom="19dp"
        android:gravity="center"
        android:text="@string/_2_de_diciembre_de_2013"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView9"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="71dp"
        android:layout_marginEnd="114dp"
        android:layout_marginBottom="23dp"
        android:gravity="center_horizontal"
        android:text="@string/autores_principales"
        android:textSize="14sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView11"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="52dp"
        android:layout_marginEnd="73dp"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:text="@string/justin_roiland_dan_harmon_ryan_ridley_m_s"
        android:textSize="12dp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView3"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="88dp"
        android:layout_marginTop="79dp"
        android:layout_marginEnd="102dp"
        android:layout_marginBottom="17dp"
        android:gravity="center_horizontal"
        android:text="@string/nombre_de_la_serie"
        android:textSize="14sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="371dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="13dp"
        android:layout_marginEnd="27dp"
        android:layout_marginBottom="73dp"
        android:gravity="center"
        android:text="@string/la_serie_sigue_las_desventuras_de_un_cient_fico_rick_y_su_f_cilmente_influenciable_nieto_morty_quienes_pasan_el_tiempo_entre_la_vida_dom_stica_y_los_viajes_espaciales_temporales_e_intergal_cticos"
        android:textSize="12dp" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView10"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="117dp"
        android:layout_marginEnd="161dp"
        android:layout_marginBottom="17dp"
        android:gravity="center_horizontal"
        android:text="@string/descripcion"
        android:textSize="14sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/bnt_url"
        android:layout_width="152dp"
        android:layout_height="48dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="110dp"
        android:layout_marginBottom="15dp"
        android:gravity="center"
        android:text="@string/sitio_web" />


</RelativeLayout>